--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,19 @@
-[tool.poetry]
+[project]
 name = "lddtest"
-version = "0.1.2"
-description = ""
-authors = ["leostimpfle <leonardstimpfle@icloud.com>"]
+version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "pandas>=2.2.3",
+    "statsmodels>=0.14.4",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-numpy = "^2.2.1"
-statsmodels = "^0.14.4"
-pandas = "^2.2.3"
-
-
-[tool.poetry.group.dev.dependencies]
-jupyter-console = "^6.6.3"
-pytest = "^8.3.4"
-stata-setup = "^0.1.3"
-rpy2 = {extras = ["all"], version = "^3.5.17"}
-
-
-[tool.poetry.group.plot.dependencies]
-plotly = "^5.24.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "jupyter-console>=6.6.3",
+    "plotly>=6.0.0",
+    "pytest>=8.3.4",
+    "rpy2[all]>=3.5.17",
+    "stata-setup>=0.1.3",
+]
